--- a/app/src/main/res/layout/activity_cardgame.xml
+++ b/app/src/main/res/layout/activity_cardgame.xml
@@ -1,3 +1,4 @@
+
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,20 +13,19 @@
     tools:context=".bingoPage">
 
     <TextView
-        android:id="@+id/bingoTV_title"
-        android:layout_width="481dp"
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginBottom="70dp"
-        android:text="BingoVocab!"
-        android:textColor="#0863A0"
-        android:textSize="36sp"
-        app:fontFamily="@font/aclonica"
-        app:layout_constraintBottom_toTopOf="@+id/mainBTN_newUser"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="20dip"
+        android:layout_marginBottom="30dp"
+        android:gravity="center"
+        android:includeFontPadding="true"
+        android:text="Feelings"
+        android:textColor="#0D47A1"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:fontFamily="casual" />
+
 
     <GridLayout
         android:id="@+id/gridofpics"
@@ -48,7 +48,7 @@
             android:keepScreenOn="true"
             android:onClick="onClick"
             android:scaleType="fitXY"
-            app:srcCompat="@drawable/elephant" />
+            app:srcCompat="@drawable/scared2" />
 
         <ImageButton
             android:id="@+id/imageButton2"
@@ -57,28 +57,28 @@
             android:adjustViewBounds="true"
             android:onClick="onClick"
             android:scaleType="fitXY"
-            app:srcCompat="@drawable/lion" />
+            app:srcCompat="@drawable/angry" />
 
         <ImageButton
             android:id="@+id/imageButton3"
             android:layout_width="194dp"
             android:layout_height="142dp"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/zebra" />
+            app:srcCompat="@drawable/happy2" />
 
         <ImageButton
             android:id="@+id/imageButton4"
             android:layout_width="183dp"
             android:layout_height="142dp"
             android:scaleType="fitXY"
-            app:srcCompat="@drawable/dog" />
+            app:srcCompat="@drawable/sad" />
 
         <ImageButton
             android:id="@+id/imageButton5"
             android:layout_width="194dp"
             android:layout_height="148dp"
             android:scaleType="fitXY"
-            app:srcCompat="@drawable/snake2" />
+            app:srcCompat="@drawable/anxious" />
 
         <ImageButton
             android:id="@+id/imageButton6"
@@ -86,10 +86,9 @@
             android:layout_height="148dp"
 
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/rabbit" />
+            app:srcCompat="@drawable/Overtired2" />
     </GridLayout>
 
+
+
 </LinearLayout>
-
-
-
