--- a/app/src/main/res/layout/activity_game_selection.xml
+++ b/app/src/main/res/layout/activity_game_selection.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:background="#FCFFFFFF"
-        android:text="options"
+        android:text="Quit"
         android:textColor="#0863A0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
