--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".login">
 
     <TextView
-        android:id="@+id/mainTV_title"
+        android:id="@+id/bingoTV_title"
         android:layout_width="481dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
@@ -37,8 +37,9 @@
         android:textColor="#0863A0"
         app:layout_constraintBottom_toTopOf="@+id/mainBTN_existingUser"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mainTV_title" />
+        app:layout_constraintTop_toBottomOf="@+id/bingoTV_title" />
 
     <Button
         android:id="@+id/mainBTN_existingUser"
