--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -29,7 +29,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="31dp"
         android:layout_marginLeft="31dp"
+        android:includeFontPadding="true"
         android:text="user name"
+        android:textColor="#0D47A1"
+        android:textStyle="bold"
+        app:fontFamily="casual"
         app:layout_constraintBaseline_toBaselineOf="@+id/nUserET_name"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -40,7 +44,11 @@
         android:layout_marginStart="35dp"
         android:layout_marginLeft="35dp"
         android:layout_marginTop="303dp"
+        android:includeFontPadding="true"
         android:text="password"
+        android:textColor="#0D47A1"
+        android:textStyle="bold"
+        app:fontFamily="casual"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -59,8 +67,8 @@
 
     <EditText
         android:id="@+id/nUserET_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="179dp"
+        android:layout_height="44dp"
         android:layout_marginStart="22dp"
         android:layout_marginLeft="22dp"
         android:ems="10"
@@ -77,7 +85,6 @@
         android:layout_marginRight="66dp"
         android:layout_marginBottom="81dp"
         android:background="@drawable/nextBTN"
-        android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -89,7 +96,6 @@
         android:layout_marginLeft="57dp"
         android:layout_marginBottom="85dp"
         android:background="@drawable/backBTN"
-        android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
